// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickAction renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "gap": 8,
      "opacity": 1,
      "width": 72,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E1F5EE",
        "borderRadius": 12,
        "height": 56,
        "justifyContent": "center",
        "width": 56,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 24,
        }
      }
    >
      📄
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#5F5E5A",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    File
  </Text>
</View>
`;

exports[`QuickAction renders disabled state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "gap": 8,
      "opacity": 0.4,
      "width": 72,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E1F5EE",
        "borderRadius": 12,
        "height": 56,
        "justifyContent": "center",
        "width": 56,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 24,
        }
      }
    >
      📷
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#5F5E5A",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    Scan
  </Text>
</View>
`;
